# snowflake-mcp

./: .env.example  CLAUDE.md  README.md  pyproject.toml
configs/: development.yaml  minimal.yaml  production.yaml
docs/: AUTHENTICATION.md  MIGRATION.md  PROMPTS_RECOVERY.md
examples/: basic_usage.py  claude_desktop_config.json  sso_externalbrowser_config.json
mcp_server_snowflake/: server.py  utils.py
services/: configuration.yaml
src/snowflake_mcp/: __init__.py  server.py
src/snowflake_mcp/config/: settings.py
src/snowflake_mcp/core/: connection.py  exceptions.py
src/snowflake_mcp/prompts/: object_prompts.py  semantic_prompts.py  sql_prompts.py
src/snowflake_mcp/resources/: schema_browser.py
src/snowflake_mcp/tools/: README.md  objects.py  semantic.py  sql.py
src/snowflake_mcp/utils/: validators.py
tests/: conftest.py
tests/unit/: test_connection_auth.py  test_validators.py
